<resources>
    <string name="app_name">元绘</string>
    <string name="sdk_name">WILL SDK for ink (Android)</string>
    <string name="client_name">android-dev</string>
    <string name="app_version">版本号：v0.0.1</string>
    <string name="raster_eraser">Raster eraser</string>
    <string name="PicUrlPrefix">http://120.78.173.15:9000/painting/</string>

    <declare-styleable name="VerificationCodeInputView">
        <!--输入框的数量-->
        <attr name="vive_et_number" format="integer" />
        <!--输入框的宽度-->
        <attr name="vive_et_width" format="dimension" />
        <!--输入框的高度-->
        <attr name="vive_et_height" format="dimension" />
        <!--输入框文字颜色-->
        <attr name="vive_et_text_color" format="color" />
        <!--输入框文字大小-->
        <attr name="vive_et_text_size" format="dimension" />
        <!--输入框间距，不输入则代表平分-->
        <attr name="vive_et_spacing" format="dimension" />
        <!--输入框背景色-->
        <attr name="vive_et_background" format="reference|color" />
        <!--输入框焦点背景色-->
        <attr name="vive_et_focus_background" format="reference|color" />
        <!--输入框焦点宽度-->
        <attr name="vive_et_cursor_width" format="dimension" />
        <!--输入框焦点高度-->
        <attr name="vive_et_cursor_height" format="dimension" />
        <!--输入框焦点颜色-->
        <attr name="vive_et_cursor_color" format="color" />
        <!--输入框下划线高度-->
        <attr name="vive_et_underline_height" format="dimension" />
        <!--输入框无焦点的下划线颜色-->
        <attr name="vive_et_underline_default_color" format="color" />
        <!--输入框有焦点的下划线颜色-->
        <attr name="vive_et_underline_focus_color" format="color" />
        <!--输入框下划线是否展示-->
        <attr name="vive_et_underline_show" format="boolean" />
    </declare-styleable>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_background">选择背景</string>
    <string name="selectColorAndAlpha">选择颜色和透明度</string>
    <string name="clearLayer">清空图层</string>
    <string name="undo">撤销</string>
    <string name="redo">恢复</string>
    <string name="pencil">pencil</string>
    <string name="water_brush">waterBrush</string>
    <string name="ink_brush">inkBrush</string>
    <string name="crayon">crayon</string>
    <string name="eraser">eraser</string>
    <string name="controlLayerWindowStatus">控制图层浮窗状态</string>
    <string name="addLayer">新增图层</string>
    <string name="lockLayer">lockLayer</string>
    <string name="copyLayer">copyLayer</string>
    <string name="search">search</string>
    <string name="homePage">首页</string>
    <string name="userPage">我的</string>
    <string name="please_input_phone_number"><font size="15">请输入手机号</font></string>
    <string name="readAndAgree">已阅读并同意</string>
    <string name="userAgreement">《用户协议》</string>
    <string name="privacyPolicy">《隐私政策》</string>
    <string name="buyYuanBei">购买元贝</string>
    <string name="recharge_first">10</string>
    <string name="recharge_second">60</string>
    <string name="recharge_third">300</string>
    <string name="recharge_fourth">980</string>
    <string name="recharge_fifth">9800</string>
    <string name="recharge_note">%s 元</string>
    <string name="un_give_name">此用户未命名</string>
    <string name="un_give_biography">这个人没有填简介啊</string>
    <string name="button">Button</string>
    <string name="purchase_prompt_field">购买即代表已阅读并同意</string>
    <string name="YuanBei_Purchase_Agreement">《元贝购买协议》</string>
    <string name="purchaseNow">立即购买</string>
    <string name="logout">退出登录</string>
    <string name="logoutPage_Btn_tip">遇到问题？请加qq：1123456789</string>
    <string name="setting">设置</string>
    <string name="YuanBei">元贝</string>
    <string name="fan">粉丝</string>
    <string name="initial_YuanBei_account">200</string>
    <string name="initial_fan_num">109</string>
    <string name="initial_author_name">昵称</string>
    <string name="initial_author_id">0</string>
    <string name="initial_author_biography">梵高油画系列太独特啦，给人物写生增加色彩🎨\n 画册：两三事、 vintages ⭐️⭐️⭐️\n 画册：两三事、 vintages ⭐️⭐️⭐️\n OUTDO｜每日速写｜潮流插画｜复古油画风\n #大触红人#Ootd #笔刷达人</string>
    <string name="initial_blockchainAddress">0x0</string>
    <string name="sponsoredWorks">应援作品</string>
    <string name="submit">submit</string>
    <string name="layer_list">图层列表</string>
    <string name="no_Internet_to_Play">暂无网络播放</string>
    <string name="author_name">\@Esther老师</string>
    <string name="paint_num">63019笔</string>
    <string name="remain_percent">10%份额在售</string>
    <string name="author_introduction">梵高油画系列风格创作，给人物写生增加色彩🎨 同名画册： vintagemuse Esther｜每日速写｜潮流插画｜复古油画风 #大触红人#Ootd #笔刷达人</string>
    <string name="paint">paint</string>
    <string name="share">share</string>
    <string name="initial_layer_alpha">100%</string>
    <string name="layer_name">图层名</string>
    <string name="layer_setting">图层设置</string>
    <string name="layer_clear">清空图层</string>
    <string name="loading">loading...</string>
    <string name="follow">关注</string>
    <string name="version_code">v0.0.1</string>
    <string name="user_agreement_text">
        <b><font size="14">元绘开发版本用户协议（仅供测试）</font></b>\n
        <p><font size="12">1、导言</font></p>\n
        <p><font size="11">欢迎你使用“元绘”软件及相关服务</font>></p>\n
        <p><font size="11">“元绘”软件及相关服务，系指公司以元绘应用程序（含不同版本）、元绘网页（<a>coPaint.com</a>）、小程序、供第三方网站和应用程序使用的元绘软件开发工具包（SDK）和应用程序编程接口（API）以及随技术发展出现的创新形态方式向你提供的产品与服务，包括但不限于个性化推荐、发布信息、互动交流、搜索查询等核心功能以及其他功能，为创作与交流的平台。《元绘用户协议》（以下简称“本协议”）是你与公司之间就你下载、安装、注册、登录、使用（以下统称“使用”）“元绘”软件及相关服务所订立的协议。

为了更好地为你提供服务，请你在开始使用“元绘”软件及相关服务之前，认真阅读并充分理解本协议，特别是涉及免除或者限制责任的条款、权利许可和信息使用的条款、同意开通和使用特殊单项服务的条款、法律适用和争议解决条款等。其中，免除或者限制责任条款等重要内容将以加粗形式提示你注意，你应重点阅读。 如你未满18周岁，请在法定监护人陪同下仔细阅读并充分理解本协议，并征得法定监护人的同意后使用“元绘”软件及相关服务。

如你不同意本协议，这将导致我们无法为你提供完整的产品和服务，你也可以选择停止使用。如你自主选择同意或使用“元绘”软件及相关服务，则视为你已充分理解本协议，并同意作为本协议的一方当事人接受本协议以及其他与“元绘”软件及相关服务相关的协议和规则（包括但不限于《隐私政策》）的约束。

            如对本协议内容有任何疑问、意见或建议，您可通过登录“元绘”客户端内的“用户反馈”页面或通过官方网站（<a>www.coPaint.cn</a>）首页“联系我们—用户反馈”入口与我们联系。</font></p>

    </string>
    <string name="privacy_policy_text">
        <b><font size="14">元绘开发版本隐私政策（仅供测试）</font></b>\n
        <p><font size="12">1、导言</font></p>\n
        <p><font size="11">欢迎你使用“元绘”软件及相关服务</font>></p>\n
        <p><font size="11">“元绘”软件及相关服务，系指公司以元绘应用程序（含不同版本）、元绘网页（<a>coPaint.com</a>）、小程序、供第三方网站和应用程序使用的元绘软件开发工具包（SDK）和应用程序编程接口（API）以及随技术发展出现的创新形态方式向你提供的产品与服务，包括但不限于个性化推荐、发布信息、互动交流、搜索查询等核心功能以及其他功能，为创作与交流的平台。《元绘用户协议》（以下简称“本协议”）是你与公司之间就你下载、安装、注册、登录、使用（以下统称“使用”）“元绘”软件及相关服务所订立的协议。

为了更好地为你提供服务，请你在开始使用“元绘”软件及相关服务之前，认真阅读并充分理解本协议，特别是涉及免除或者限制责任的条款、权利许可和信息使用的条款、同意开通和使用特殊单项服务的条款、法律适用和争议解决条款等。其中，免除或者限制责任条款等重要内容将以加粗形式提示你注意，你应重点阅读。 如你未满18周岁，请在法定监护人陪同下仔细阅读并充分理解本协议，并征得法定监护人的同意后使用“元绘”软件及相关服务。

如你不同意本协议，这将导致我们无法为你提供完整的产品和服务，你也可以选择停止使用。如你自主选择同意或使用“元绘”软件及相关服务，则视为你已充分理解本协议，并同意作为本协议的一方当事人接受本协议以及其他与“元绘”软件及相关服务相关的协议和规则（包括但不限于《隐私政策》）的约束。

            如对本协议内容有任何疑问、意见或建议，您可通过登录“元绘”客户端内的“用户反馈”页面或通过官方网站（<a>www.coPaint.cn</a>）首页“联系我们—用户反馈”入口与我们联系。</font></p>

    </string>
</resources>
