<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:text="@string/author_name"
        android:textColor="#f3f3f3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/paintSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paintSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:text="@string/paint_num"
        android:textColor="#f3f3f3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/authorName"
        app:layout_constraintTop_toBottomOf="@+id/authorName" />

    <TextView
        android:id="@+id/remainShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="2dp"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:text="@string/remain_percent"
        android:textColor="#f3f3f3"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/paintSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/paintSum" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:text="@string/author_introduction"
        android:textColor="#f3f3f3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/paintSum"
        app:layout_constraintTop_toBottomOf="@+id/paintSum" />
</androidx.constraintlayout.widget.ConstraintLayout>