<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPageCreatorActivity">

    <cn.copaint.audience.views.ParentNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="15:7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_user_center"
                android:contentDescription="@null" />

            <ImageView
                android:id="@+id/configButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_more"
                android:onClick="onSetting"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/setting" />

            <View
                android:id="@+id/headerView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="5:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:padding="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerView"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp">

                    <TextView
                        android:id="@+id/moneyNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="144dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="buyScallop"
                        android:text="@string/YuanBei"
                        android:textColor="#888888"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/moneyText"
                        app:layout_constraintEnd_toStartOf="@+id/splitLine"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/splitLine"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <View
                        android:id="@+id/touch_moneyNote"
                        android:layout_width="82dp"
                        android:layout_height="68dp"
                        android:layout_marginStart="144dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="buyScallop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/splitLine"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toTopOf="@+id/splitLine"
                        />

                    <View
                        android:id="@+id/splitLine"
                        android:layout_width="1dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="24dp"
                        android:background="#EEEEEE"
                        app:layout_constraintEnd_toStartOf="@+id/fansNote"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/moneyNote"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fansNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:onClick="onFans"
                        android:text="粉丝"
                        android:textColor="#888888"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/fansText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/splitLine"
                        app:layout_constraintTop_toTopOf="@+id/splitLine"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/moneyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="buyScallop"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/splitLine"
                        app:layout_constraintEnd_toEndOf="@id/moneyNote"
                        app:layout_constraintStart_toStartOf="@id/moneyNote"
                        app:layout_constraintTop_toBottomOf="@+id/moneyNote" />

                    <TextView
                        android:id="@+id/fansText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onFans"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/splitLine"
                        app:layout_constraintEnd_toEndOf="@+id/fansNote"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/fansNote"
                        app:layout_constraintTop_toBottomOf="@+id/fansNote" />

                    <View
                        android:id="@+id/touch_fansNote"
                        android:layout_width="82dp"
                        android:layout_height="68dp"
                        android:onClick="onFans"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/splitLine"
                        app:layout_constraintTop_toTopOf="@+id/splitLine"
                        />

                    <TextView
                        android:id="@+id/authorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="112dp"
                        android:text="@string/initial_author_name"
                        android:textColor="#cc000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/authorId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:onClick="copyId"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/authorName"
                        app:layout_constraintTop_toBottomOf="@+id/authorName" />

                    <Button
                        android:id="@+id/followBtn"
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="24dp"
                        android:onClick="onFollowAction"
                        android:autoSizeMinTextSize="5sp"
                        android:background="@drawable/bg_btn_follow"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:text="关注"
                        app:layout_constraintBottom_toTopOf="@+id/lineView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/authorName" />

                    <View
                        android:id="@+id/lineView"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="24dp"
                        android:background="#EEEEEE"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/authorId" />


                    <TextView
                        android:id="@+id/biography"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:lineSpacingExtra="12px"
                        android:text="@string/initial_author_biography"
                        android:textColor="#cc000000"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/grayBackground"
                        app:layout_constraintEnd_toEndOf="@+id/lineView"
                        app:layout_constraintStart_toStartOf="@+id/lineView"
                        app:layout_constraintTop_toBottomOf="@+id/lineView" />

                    <View
                        android:id="@+id/grayBackground"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:background="#FAFAFA"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/blockchainAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="24dp"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:onClick="copyAddress"
                        android:text="@string/initial_blockchainAddress"
                        android:textColor="#4D000000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/grayBackground" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:elevation="2dp"
                android:src="@drawable/avatar_sample"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="6dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/headerView"
                app:layout_constraintWidth_percent="0.2" />


            <TextView
                android:id="@+id/supportWorks"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:background="#FAFBFF"
                android:gravity="center"
                android:text="Ta 的作品"
                android:textColor="#333333"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/supportWorksRecyclerView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supportWorks" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </cn.copaint.audience.views.ParentNestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>